--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "netlify": "netlify"
   },
   "dependencies": {
     "netlify-identity-widget": "^1.9.2",
